fixed dotswap animation on iPhone

--- a/src/scss/icons/_animations.scss
+++ b/src/scss/icons/_animations.scss
@@ -14,11 +14,11 @@
 // dot swap animations
 @keyframes dotSwap1 {
 	0%{
-		top: 0;
-		left: 0;
+		top: 0%;
+		left: 0%;
 	}
 	25%{
-		top: 0;
+		top: 0%;
 		left: 100%;
 	}
 	50%{
@@ -27,16 +27,16 @@
 	}
 	75%{
 		top: 100%;
-		left: 0;
+		left: 0%;
 	}
 	100%{
-		top: 0;
-		left: 0;
+		top: 0%;
+		left: 0%;
 	}
 }
 @keyframes dotSwap2 {
 	0%{
-		top: 0;
+		top: 0%;
 		left: 100%;
 	}
 	25%{
@@ -45,14 +45,14 @@
 	}
 	50%{
 		top: 100%;
-		left: 0;
+		left: 0%;
 	}
 	75%{
-		top: 0;
-		left: 0;
+		top: 0%;
+		left: 0%;
 	}
 	100%{
-		top: 0;
+		top: 0%;
 		left: 100%;
 	}
 }
@@ -64,14 +64,14 @@
 	}
 	25%{
 		top: 100%;
-		left: 0;
+		left: 0%;
 	}
 	50%{
-		top: 0;
-		left: 0;
+		top: 0%;
+		left: 0%;
 	}
 	75%{
-		top: 0;
+		top: 0%;
 		left: 100%;
 	}
 	100%{
@@ -82,14 +82,14 @@
 @keyframes dotSwap4 {
 	0%{
 		top: 100%;
-		left: 0;
+		left: 0%;
 	}
 	25%{
-		top: 0;
-		left: 0;
+		top: 0%;
+		left: 0%;
 	}
 	50%{
-		top: 0;
+		top: 0%;
 		left: 100%;
 	}
 	75%{
@@ -98,7 +98,7 @@
 	}
 	100%{
 		top: 100%;
-		left: 0;
+		left: 0%;
 	}
 }
 
